Projected PC scores for oasis data

--- a/motifs_pca.ipynb
+++ b/motifs_pca.ipynb
@@ -95,19 +95,23 @@
     "# +++ Set Paths +++\n",
     "# Input directory for graph and motif data\n",
     "graph_dir = '/Users/CN/Dropbox/speech_graphs/all_tats'\n",
+    "# Output directory for tables\n",
+    "output_dir = op.join(graph_dir, 'output')\n",
     "# Output directory for figures\n",
-    "output_dir = '/Users/CN/Dropbox/speech_graphs/all_tats/figures/'\n",
+    "output_figures = op.join(graph_dir, 'figures')\n",
+    "\n",
+    "\n",
     "\n",
     "# +++ Import Data +++\n",
     "# --------------------- Import graph data ---------------------------------------\n",
-    "graph_data = op.join(graph_dir, 'output/graph_data.csv')\n",
+    "graph_data = op.join(output_dir, 'graph_data.csv')\n",
     "df = pd.read_csv(graph_data, index_col=0)\n",
     "\n",
     "# --------------------- Add motif counts ---------------------------------------\n",
     "# If already counted and motif_counts.csv exists, imports motif count data\n",
     "try:\n",
     "    # Import motif count data\n",
-    "    motif_counts = pd.read_csv(op.join(graph_dir, 'output/motif_counts.csv'))\n",
+    "    motif_counts = pd.read_csv(op.join(output_dir, 'motif_counts.csv'))\n",
     "    # df = pd.read_csv(op.join(graph_data))\n",
     "except FileNotFoundError:\n",
     "    print('----- Error: Cannot find {}} -----\\nIt seems motifs have not been counted yet.\\nRun motifs.py to count motifs before running this cell.'.format(graph_data))\n",
@@ -119,8 +123,7 @@
     "# --------------------- Add syntactic graph data ---------------------------------------\n",
     "\n",
     "# Import\n",
-    "syn = pd.read_csv(\n",
-    "    '/Users/CN/Dropbox/speech_graphs/all_tats/output/syntactic_graph_data.csv', index_col=0)\n",
+    "syn = pd.read_csv(op.join(output_dir, 'syntactic_graph_data.csv', index_col=0))\n",
     "# Add to dataframe\n",
     "df = df.merge(syn, how='inner', on=[\n",
     "    'subj', 'tat'])\n",
@@ -150,17 +153,6 @@
    ],
    "source": [
     "print(df.shape[0],nlp.shape[0], syn.shape[0], motif_counts.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Output directory for figures\n",
-    "output_dir = '/Users/CN/Dropbox/speech_graphs/all_tats/figures/'\n",
-    "\n"
    ]
   },
   {
@@ -295,7 +287,7 @@
     "# --- Biplot with unrotated components ---\n",
     "X_new = pca.fit_transform(df[motif_cols])\n",
     "biplot(X_new[:, 0:2], np.transpose(pca.components_[0:2, :]), df.edges)\n",
-    "# output = op.join(output_dir, 'PCA_biplot_unrotated' +\n",
+    "# output = op.join(output_figures, 'PCA_biplot_unrotated' +\n",
     "#                  '_{0}'.format(str(datetime.date.today())))\n",
     "# plt.savefig(output)\n",
     "plt.show()"
@@ -342,9 +334,8 @@
     "corrMatrix = df[gra_columns + ['PC1_score', 'PC2_score', 'PC3_score']].corr()\n",
     "# sns.heatmap(corrMatrix, mask=np.triu(corrMatrix), annot=True)\n",
     "sns.heatmap(corrMatrix, annot=True)\n",
-    "output_dir = '/Users/CN/Dropbox/speech_graphs/all_tats/figures/'\n",
     "output = op.join(\n",
-    "    output_dir, 'CorrMat_PCA_Graphs')\n",
+    "    output_figures, 'CorrMat_PCA_Graphs')\n",
     "plt.savefig(output)\n",
     "plt.show()\n"
    ]
@@ -373,9 +364,8 @@
     "corrMatrix = df[nlp_columns + ['PC1_score', 'PC2_score', 'PC3_score']].corr()\n",
     "# sns.heatmap(corrMatrix, mask=np.triu(corrMatrix), annot=True)\n",
     "sns.heatmap(corrMatrix, annot=True)\n",
-    "output_dir = '/Users/CN/Dropbox/speech_graphs/all_tats/figures/'\n",
     "output = op.join(\n",
-    "    output_dir, 'CorrMat_PCA_NLP')\n",
+    "    output_figures, 'CorrMat_PCA_NLP')\n",
     "plt.savefig(output)\n",
     "plt.show()\n"
    ]
@@ -404,9 +394,8 @@
     "corrMatrix = df[syn_columns + ['PC1_score', 'PC2_score', 'PC3_score']].corr()\n",
     "# sns.heatmap(corrMatrix, mask=np.triu(corrMatrix), annot=True)\n",
     "sns.heatmap(corrMatrix, annot=True)\n",
-    "output_dir = '/Users/CN/Dropbox/speech_graphs/all_tats/figures/'\n",
     "output = op.join(\n",
-    "    output_dir, 'CorrMat_PCA_Syntactic')\n",
+    "    output_figures, 'CorrMat_PCA_Syntactic')\n",
     "plt.savefig(output)\n",
     "plt.show()\n"
    ]
