--- a/regressing_nodes_genpub.ipynb
+++ b/regressing_nodes_genpub.ipynb
@@ -207,6 +207,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --------------------- Write residualised variables to csv ---------------------------------------\n",
+    "\n",
+    "oasis[['subj', 'words', 'sentences', 'nodes', 'connected_components_res', 'cc_size_med_res', 'cc_size_mean_res']].to_csv(op.join('/Users/CN/Dropbox/speech_graphs/oasis/output', 'graph_data_residualised.csv'))\n",
+    "# oasis.to_csv(op.join('/Users/CN/Dropbox/speech_graphs/oasis/output', 'graph_data_residualised_avg.csv'))\n",
+    "\n",
+    "\n",
+    "# --------------------- Average across tats ---------------------------------------\n",
+    "oasis_avg = (oasis.groupby((oasis.subj != oasis.subj.shift()).cumsum())\n",
+    "          .mean()\n",
+    "          .reset_index(drop=True))\n",
+    "\n",
+    "# Add subj index that was dropped during averaging back into dataframe\n",
+    "oasis_avg['subj'] = None\n",
+    "for subject in oasis.subj.unique():\n",
+    "    # Find position where the average for words, sentences and nodes match the oasis_avg value\n",
+    "    match_words = oasis.query('subj == @subject').mean().words == oasis_avg.words\n",
+    "    match_sentences = oasis.query(\n",
+    "        'subj == @subject').mean().sentences == oasis_avg.sentences\n",
+    "    match_nodes = oasis.query(\n",
+    "        'subj == @subject').mean().nodes == oasis_avg.nodes\n",
+    "    intersection = np.logical_and(match_words, match_sentences)\n",
+    "    intersection = np.logical_and(intersection, match_nodes)\n",
+    "    oasis_avg.loc[intersection, 'subj'] = subject\n",
+    "\n",
+    "\n",
+    "oasis_avg['group'] = pd.Categorical(oasis_avg.group_n)\n",
+    "\n",
+    "oasis_avg.group = oasis_avg.group.cat.rename_categories(\n",
+    "    {0: 'CON', -56: 'FEP', 100: 'CHR'})\n",
+    "oasis_avg.group.cat.reorder_categories(\n",
+    "    ['CON', 'CHR', 'FEP'], inplace=True)\n",
+    "oasis_avg.group.value_counts()\n",
+    "\n",
+    "# --------------------- Write residualised variables averaged across tats to csv ---------------------------------------\n",
+    "oasis_avg[['subj', 'words', 'sentences', 'nodes', 'connected_components_res', 'cc_size_med_res', 'cc_size_mean_res']].to_csv(op.join('/Users/CN/Dropbox/speech_graphs/oasis/output', 'graph_data_residualised_avg.csv'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
@@ -456,6 +499,67 @@
     "\n",
     "fig = plt.figure(figsize=(14, 5))\n",
     "for v,variable in enumerate(variable_list):\n",
+    "    ax = plt.subplot(1, 3, v+1)\n",
+    "    sns.boxplot(y=variable, x='group',\n",
+    "              data=oasis,\n",
+    "              palette=\"colorblind\",\n",
+    "              )\n",
+    "    results_mwu = []\n",
+    "    results_ttest = []\n",
+    "    stats_summary = ''\n",
+    "    for c, comb in enumerate(group_comparisons):\n",
+    "        a = oasis.query('group == @comb[0]')[variable]\n",
+    "        b = oasis.query('group == @comb[1]')[variable]\n",
+    "        results_mwu.append(sp.stats.mannwhitneyu(a,b))\n",
+    "        results_ttest.append(sp.stats.ttest_ind(a,b))\n",
+    "        # print('{0} vs. {1} {2} ({3})'.format(comb[0], comb[1], round(results_mwu[c][0],8), round(results_mwu[c][1],8) ))\n",
+    "        if results_mwu[c][1] < 0.001:\n",
+    "            symbol = '***'\n",
+    "        elif results_mwu[c][1] < 0.01:\n",
+    "            symbol = '**'\n",
+    "        elif results_mwu[c][1] < 0.05:\n",
+    "            symbol = '*'\n",
+    "        else:\n",
+    "            symbol = ''\n",
+    "        stats_summary = stats_summary + '{0} vs. {1} {2} ({3}){4}\\n'.format(comb[0], comb[1], round(results_mwu[c][0],8), round(results_mwu[c][1],8), symbol)\n",
+    "    plt.title(stats_summary)\n",
+    "plt.subplots_adjust(hspace = 0.4)\n",
+    "output = op.join(output_figures_oasis, 'Hist_{}' +\n",
+    "                 '_{}'.format('_'.join(variable_list), str(datetime.date.today())))\n",
+    "plt.savefig(output)\n",
+    "plt.show(block=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "Could not interpret input 'Coh.'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-369da3127443>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     sns.boxplot(y=variable, x='group',\n\u001b[1;32m     11\u001b[0m               \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moasis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m               \u001b[0mpalette\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"colorblind\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m               )\n\u001b[1;32m     14\u001b[0m     \u001b[0mresults_mwu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Projects/Cambridge/cambridge_language_analysis/venv/lib/python3.7/site-packages/seaborn/_decorators.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     44\u001b[0m             )\n\u001b[1;32m     45\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Projects/Cambridge/cambridge_language_analysis/venv/lib/python3.7/site-packages/seaborn/categorical.py\u001b[0m in \u001b[0;36mboxplot\u001b[0;34m(x, y, hue, data, order, hue_order, orient, color, palette, saturation, width, dodge, fliersize, linewidth, whis, ax, **kwargs)\u001b[0m\n\u001b[1;32m   2240\u001b[0m     plotter = _BoxPlotter(x, y, hue, data, order, hue_order,\n\u001b[1;32m   2241\u001b[0m                           \u001b[0morient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpalette\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaturation\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2242\u001b[0;31m                           width, dodge, fliersize, linewidth)\n\u001b[0m\u001b[1;32m   2243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2244\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0max\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Projects/Cambridge/cambridge_language_analysis/venv/lib/python3.7/site-packages/seaborn/categorical.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, x, y, hue, data, order, hue_order, orient, color, palette, saturation, width, dodge, fliersize, linewidth)\u001b[0m\n\u001b[1;32m    404\u001b[0m                  width, dodge, fliersize, linewidth):\n\u001b[1;32m    405\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 406\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestablish_variables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhue_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    407\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestablish_colors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpalette\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaturation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    408\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Projects/Cambridge/cambridge_language_analysis/venv/lib/python3.7/site-packages/seaborn/categorical.py\u001b[0m in \u001b[0;36mestablish_variables\u001b[0;34m(self, x, y, hue, data, orient, order, hue_order, units)\u001b[0m\n\u001b[1;32m    151\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m                     \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Could not interpret input '{}'\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m             \u001b[0;31m# Figure out the plotting orientation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Could not interpret input 'Coh.'"
+     ]
+    }
+   ],
+   "source": [
+    "variables = ['nodes', 'edges', 'Coh.']\n",
+    "\n",
+    "\n",
+    "# ------------ Plot the raw connected component values ------------\n",
+    "group_comparisons = [('CON', 'FEP'), ('CON', 'CHR'), ('CHR', 'FEP')]\n",
+    "\n",
+    "fig = plt.figure(figsize=(14, 5))\n",
+    "for v,variable in enumerate(variables):\n",
     "    ax = plt.subplot(1, 3, v+1)\n",
     "    sns.boxplot(y=variable, x='group',\n",
     "              data=oasis,\n",
